--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,16 @@
   /*deals with all containers on the page*/
 }
 
+* .transition-fade {
+  opacity: 1;
+  -webkit-transition: 500ms;
+  transition: 500ms;
+}
+
+* .transition-fade html.is-animating {
+  opacity: 0;
+}
+
 * .container {
   /*brings into center*/
   width: 100%;
